Created the PKGBUILD
Filename: PKGBUILD
Reason: Created so that Arch Linux packages could be built for this
software

Filename: .gitignore
Reason: Updated to ignore stuff created when makepkg is run

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,14 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+## AUR stuff
+# ignore any files in the pkg directory
+# ignore any files in the src directory
+# ignore any aurget_*.zip files
+# ignore any *.tar.xz files
+pkg
+src
+aursearch_*.zip
+*.tar.xz
+
