Fixed typo in the PKGBUILD
Filename: PKGBUILD
Reason: The downloaded filename for the source array was set to .zip,
not .tar.gz as it should have been

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,6 @@ nosetests.xml
 # ignore the source tarballs created by makepkg --source
 pkg
 src
-aursearch_*.zip
+aursearch*.tar.gz
 *.tar.xz
 *.src.tar.*
